# meeting-intelligence

./: .env.example  .gitignore  README.md  dev_server.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
benchmarks/: benchmark_runner.py  emotion_evaluator.py  latency_profiler.py  wer_evaluator.py
config/: logging_config.py  settings.py
deploy/: Dockerfile  Dockerfile.dev  gunicorn_config.py  meeting-intelligence.service  nginx.conf
frontend/: index.html
scripts/: download_models.py
src/api/: app.py  cors.py  error_handlers.py  routes.py  streaming.py  validators.py
src/pipeline/: asr_engine.py  audio_ingestion.py  debrief_generator.py  diarization.py  emotion_classifier.py  intent_classifier.py  orchestrator.py  transcript_aligner.py
src/utils/: audio_utils.py  device_manager.py  job_store.py
tests/: conftest.py  test_api.py  test_pipeline.py
