[tool.vercel]
entrypoint = "src.api.app:create_app"

[project]
name = "meeting-intelligence"
version = "0.1.0"
description = "Real-Time Multilingual Meeting Intelligence System"
requires-python = ">=3.10"

# Vercel/uv requires PEP 508 dependency specs here.
# This project already has a complete requirements.txt; listing them here
# would be large. Instead, keep dependencies empty and let Vercel install
# from requirements.txt.
#
# If your Vercel build does not auto-install requirements.txt, then
# add explicit PEP-508 dependencies instead.
dependencies = [
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
  "python-dotenv>=1.0.0",
]

